# cplat

./: .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  LICENSE.md  README.md  mingw_toolchain.cmake
include/: cplat.h
include/cplat/: asserts.h  input.h  keys.h  macros.h  memory.h  time_constants.h
include/cplat_exposed_native/: cplat_exposed_windows.h  window_linux.h  window_windows.h
lib-src/: cplat.h  cplat_linux.c  cplat_windows.c
lib-src/cplat/: asserts.h  input.h  keys.h  logger.c  logger.h  macros.h  memory.h  memory_linux.c  memory_windows.c  thread.h  thread_linux.c  thread_windows.c  time_constants.h
lib-src/cplat_exposed_native/: cplat_exposed_linux.h  cplat_exposed_windows.h  window_linux.h  window_windows.h
src/: main.cpp
