load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "cplat",
    srcs = glob([
        "lib-src/**/*.c",
        "lib-src/*.c",
    ]),
    hdrs = glob([
        "lib-src/**/*.h",
        "lib-src/*.h",
    ]),
    includes = ["lib-src/"],
    linkopts = select({
        "@platforms//os:windows": [
            "-static",
            "-lopengl32",
            "-lgdi32",
            "-mwindows"
        ],
        "@platforms//os:linux": [
            "-lxcb",
            "-lxcb-keysyms",
            "-lxcb-randr",
            "-lX11-xcb",
            "-lX11",
            "-lGL",
            "-lEGL",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    alwayslink = True,
    linkstatic = True,
    #defines = ["CP_DEBUG"]
)

cc_binary(
    name = "test",
    srcs = ["src/main.cpp"],
    visibility = ["//visibility:public"],
    deps = [":cplat"],
)
